tests/snapshots/string_decomposition_tests__lf_semicolon_decomposed.snap
---
source: tests/string_decomposition_tests.rs
assertion_line: 19
expression: lf_mutable
---
MutablePair {
    rule_name: "star_file",
    content: "data_test\n_semicolon_string\n;\nThis is a test string.\nIt has multiple lines.\n;",
    start: 0,
    end: 77,
    children: [
        MutablePair {
            rule_name: "data_block",
            content: "data_test\n_semicolon_string\n;\nThis is a test string.\nIt has multiple lines.\n;",
            start: 0,
            end: 77,
            children: [
                MutablePair {
                    rule_name: "data_heading",
                    content: "data_test",
                    start: 0,
                    end: 9,
                    children: [],
                },
                MutablePair {
                    rule_name: "data",
                    content: "_semicolon_string\n;\nThis is a test string.\nIt has multiple lines.\n;",
                    start: 10,
                    end: 77,
                    children: [
                        MutablePair {
                            rule_name: "data_name",
                            content: "_semicolon_string",
                            start: 10,
                            end: 27,
                            children: [],
                        },
                        MutablePair {
                            rule_name: "semi_colon_string",
                            content: "\n;\nThis is a test string.\nIt has multiple lines.\n;",
                            start: 27,
                            end: 77,
                            children: [
                                MutablePair {
                                    rule_name: "NEWLINE_SEMICOLON",
                                    content: "\n;",
                                    start: 27,
                                    end: 29,
                                    children: [],
                                },
                                MutablePair {
                                    rule_name: "string",
                                    content: "\nThis is a test string.\nIt has multiple lines.",
                                    start: 29,
                                    end: 75,
                                    children: [],
                                },
                                MutablePair {
                                    rule_name: "NEWLINE_SEMICOLON",
                                    content: "\n;",
                                    start: 75,
                                    end: 77,
                                    children: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
        MutablePair {
            rule_name: "EOI",
            content: "",
            start: 77,
            end: 77,
            children: [],
        },
    ],
}
